# reference

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
Framework/Framework/: index.html
Framework/Presentations/: index.html
Framework/brand-guidelines/: index.html
NetDevOpsPrimer/Automation/: index.html
NetDevOpsPrimer/Feedback/: index.html
NetDevOpsPrimer/IBN/: index.html
NetDevOpsPrimer/IaC/: index.html
NetDevOpsPrimer/NFV/: index.html
NetDevOpsPrimer/NetDevOps/: index.html
NetDevOpsPrimer/NetDevOpsPrimer/: index.html
NetDevOpsPrimer/NetworkObservability/: index.html
NetDevOpsPrimer/NetworkValidation/: index.html
NetDevOpsPrimer/NetworkVirtualization/: index.html
NetDevOpsPrimer/Orchestration/: index.html
NetDevOpsPrimer/SDN/: index.html
docs/: index.md
docs/Framework/: Framework.md  Presentations.md  brand-guidelines.md
docs/NetDevOpsPrimer/: Automation.md  Feedback.md  IBN.md  IaC.md  NFV.md  NetDevOps.md  NetDevOpsPrimer.md  NetworkObservability.md  NetworkValidation.md  NetworkVirtualization.md  Orchestration.md  SDN.md
search/: search_index.json
