[project]
name = "autonomicon"
version = "0.1.0"
description = "lexicon / glossary for \"standard\" and/or common network automation terms and concepts"
readme = "README.md"
license = { text = "CC0-1.0" }
authors = [{ name = "Network Automation Community" }]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "yamllint",
    "Markdown",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.13",
]
